<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="chucker_name">Chucker</string>
    <string name="chucker_http_notification_title">Recording HTTP activity</string>
    <string name="chucker_clear">Clear</string>
    <string name="chucker_encode_url">Encode URL</string>
    <string name="chucker_cancel">Cancel</string>
    <string name="chucker_overview">Overview</string>
    <string name="chucker_request">Request</string>
    <string name="chucker_response">Response</string>
    <string name="chucker_url">URL</string>
    <string name="chucker_method">Method</string>
    <string name="chucker_protocol">Protocol</string>
    <string name="chucker_status">Status</string>
    <string name="chucker_ssl">SSL</string>
    <string name="chucker_tls_version">TLS version</string>
    <string name="chucker_tls_cipher_suite">Cipher Suite</string>
    <string name="chucker_request_time">Request time</string>
    <string name="chucker_response_time">Response time</string>
    <string name="chucker_duration">Duration</string>
    <string name="chucker_request_size">Request size</string>
    <string name="chucker_response_size">Response size</string>
    <string name="chucker_total_size">Total size</string>
    <string name="chucker_yes">Yes</string>
    <string name="chucker_no">No</string>
    <string name="chucker_share">Share</string>
    <string name="chucker_export">Export</string>
    <string name="chucker_export_empty_text">Nothing to export</string>
    <string name="chucker_export_no_file">Failed to create file for export</string>
    <string name="chucker_share_as_text">Share as text</string>
    <string name="chucker_share_as_curl">Share as curl command</string>
    <string name="chucker_share_as_file">Share as file</string>
    <string name="chucker_share_as_har">Share as .har file</string>
    <string name="chucker_save">Save body to file</string>
    <string name="chucker_save_failed_to_open_document">Failed to open file chooser</string>
    <string name="chucker_file_saved">File saved successfully!</string>
    <string name="chucker_file_not_saved">Failed to save file</string>
    <string name="chucker_file_not_saved_body_is_empty">Nothing to save as the body is empty</string>
    <string name="chucker_body_empty">(body is empty)</string>
    <string name="chucker_body_omitted">(encoded or binary body omitted)</string>
    <string name="chucker_search">Search</string>
    <string name="chucker_body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="chucker_network_tutorial">This tab displays network requests recorded with the ChuckerInterceptor. Add the interceptor to your OkHttp client to reap the benefits.</string>
    <string name="chucker_network_notification_category">Chucker network requests</string>
    <string name="chucker_share_transaction_title">Share transaction details</string>
    <string name="chucker_share_all_transactions_title">Share transactions</string>
    <string name="chucker_share_transaction_subject">Transaction details</string>
    <string name="chucker_share_all_transactions_subject">All transactions</string>
    <string name="chucker_clear_http_confirmation">Do you want to clear complete network calls history?</string>
    <string name="chucker_export_text_http_confirmation">Do you want to export all network transactions as a text file?</string>
    <string name="chucker_export_har_http_confirmation">Do you want to export all network transactions as a .har file?</string>
    <string name="chucker_export_separator">==================</string>
    <string name="chucker_export_prefix">/* Export Start */</string>
    <string name="chucker_export_postfix">/*  Export End  */</string>
    <string name="chucker_check_readme"><a href="https://github.com/ChuckerTeam/chucker/blob/develop/README.md#configure-">Check the setup instructions on GitHub</a></string>
    <string name="chucker_setup">Setup</string>
    <string name="chucker_binary_data">binary data</string>
    <string name="chucker_request_not_ready">The request isn\'t ready for sharing or saving</string>
    <string name="chucker_request_is_empty">This request is empty</string>
    <string name="chucker_response_is_empty">This response is empty</string>
    <string name="chucker_shortcut_label">Open Chucker</string>
    <string name="chucker_notifications_permission_not_granted">Chucker can\'t show notifications without permission</string>
    <string name="chucker_change">Change</string>
    <string name="chucker_graphql_operation_is_empty"> &lt;Unable to discover GraphQL operation name&gt;</string>
    <string name="chucker_scroll_buttons_for_search">Buttons to scroll the search items</string>
    <string name="chucker_search_results_title">Search Results:</string>
    <string name="chucker_filters">Filters</string>
    <string name="chucker_apply">Apply</string>
    <string name="chucker_scheme">Scheme</string>
    <string name="chucker_http">http</string>
    <string name="chucker_https">https</string>
    <string name="chucker_method_get">GET</string>
    <string name="chucker_method_post">POST</string>
    <string name="chucker_method_put">PUT</string>
</resources>
