<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/chucker_filter_fragment_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/chucker_filter_fragment_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:toolbarId="@+id/chucker_filter_fragment_toolbar"
        app:title="@string/chucker_filters">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/chucker_filters"
        app:layout_collapseMode="pin" />
    </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chucker_filter_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/chucker_horizontal_divider"
        app:layout_constraintTop_toBottomOf="@id/chucker_filter_fragment_app_bar" />

    <View
        android:id="@+id/chucker_horizontal_divider"
        android:backgroundTint="@android:color/darker_gray"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/chucker_filter_apply_button" />

    <Button
        android:id="@+id/chucker_filter_apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chucker_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chucker_filter_cancel_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/chucker_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/chucker_filter_apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chucker_filter_apply_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
